--- a/APSA_2012/Paper/APSA_Paper_2012.tex
+++ b/APSA_2012/Paper/APSA_Paper_2012.tex
@@ -7,7 +7,6 @@
 %\usepackage{apsr}
 \usepackage{array,amsmath,psfrag,amssymb,subfigure,tabularx}
 \usepackage{hyperref,multicol}
-\usepackage{pa}
 \usepackage{booktabs}
 \usepackage[usenames]{color}
 \usepackage{datetime}
@@ -38,7 +37,7 @@
 \setboolean{blind}{false}
 
 
-\title{ITitle goes here \\\  \thanks{Thanks to me and you!
+\title{Title goes here \\\  \thanks{Thanks to me and you!
    This work was supported by the Information Processing Technology Office of the
     Defense Advanced Research Projects Agency through a
     holding grant is to the Lockheed Martin Corporation [FA8650-07-C-7749].}}
